--- a/Linkedin_Easyapply/Backend/package.json
+++ b/Linkedin_Easyapply/Backend/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^3.1.0",
     "@xenova/transformers": "^2.17.2",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "natural": "^7.1.0",
-    "nodemon": "^3.1.7",
     "playwright": "^1.47.2",
     "playwright-chromium": "^1.44.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
