--- a/Linkedin_Easyapply/Frontend/package.json
+++ b/Linkedin_Easyapply/Frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
+    "playwright": "^1.48.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
